--- a/web dev/HTML_CSS/bike website/test_website.html
+++ b/web dev/HTML_CSS/bike website/test_website.html
@@ -1,4 +1,4 @@
-<!-- HTML: hypertext markup language, gives webpage structure | CSS: cascading style sheets, styles HTML elements
+<!-- HTML: hypertext markup language, gives webpage structure | HTML_CSS: cascading style sheets, styles HTML elements
 line 9 contains opening and closing tags; web browsers only see contents between
 anchor elements <a href="...">...</a> -- attribute name, attr. value, link text
 - links users to websites, href specifies webpage, web addresses like google.com = URL
