--- a/web dev/my portfolio/index.html
+++ b/web dev/my portfolio/index.html
@@ -21,6 +21,7 @@
         <section class="jumbotron">
             <div class="container">
                 <div class="row">
+                    <h2>Data Science & </h2>
                     <h2>Machine Learning Enthusiast</h2>
                     <h3>Python, SQL, JS, C, C++</h3>
                 </div>
