--- a/web dev/my portfolio/education.html
+++ b/web dev/my portfolio/education.html
@@ -8,6 +8,43 @@
     <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+      <header class="container">
+          <div class="row">
+              <h1 class="col-sm-6">Patrick Tsai</h1>
+              <nav class="col-sm-6 text-right">
+                <a href="index.html">Home</a>
+                <a href="about.html">About Me</a>
+                <a href="experience.html">Experience</a>
+              </nav>
+          </div>
+      </header>
+      <section class="jumbotron">
+          <div class="container">
+            <div class="row">
+                <h2>Education</h2>
+            </div>
+        </div>
+      </section>
+      <section class="container">
+        <div classes="row justify-content-center">
+            <div class="col-sm-6">
+                <img src="#">
+                <p>Hi, my name is ___...</p>
+
+            </div>
+        </div>
+      </section>
+      <footer class="container">
+          <div class="row">
+              <p class="col-sm-4">&copy; 2020 Patrick Tsai</p>
+          </div>
+          <div class="col-sm-2">
+              <a href="https://github.com/pattiestarfish" target="__">GitHub</a>
+          </div>
+          <div class="col-sm-2">
+              <a href="https://linkedin.com/" target="__">LinkedIn</a>
+          </div>
+      </footer>
 
 
   </body>
