--- a/web dev/my portfolio/index.html
+++ b/web dev/my portfolio/index.html
@@ -19,9 +19,14 @@
       </div>
     </header>
     <section class="jumbotron">
-      <div class="row">
-        <h2>Machine Learning Enthusiast</h2>
-        <h3>Python, SQL, JS, C, C++</h3>
+      <div class="container">
+        <div class="row text-center">
+          <h2>Data Science</h2>
+          <h4>Machine Learning </h4>
+        </div>
+        <div class="row"
+          <h3>Python, SQL, C, C++, HTML/CSS</h3>
+        </div>
       </div>
     </section>
     <footer class="container">
